--- a/portfolio-frontend/package.json
+++ b/portfolio-frontend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portfolio-frontend",
-  "homepage": "http://reckziegelwilliam.github.io/",
+  "homepage": "https://reckziegelwilliam.github.io",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -30,12 +30,12 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
